# cunuSHT

./: #pyproject.toml  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.2  README.md  requirements.txt  setup.py  test_jax.py
.github/workflows/: pytest.yaml
cunusht/: __init__.py  cacher.py  cunusht.py  geometry.py  helper.py  helper_CPU.py  helper_GPU.py  utils.py
cunusht/c/: CMakeLists.txt  doubling.cu  kernel_params.h  podo_interface.py  pointing.cpp  pointing.cuh  pyproject.toml
cunusht/c/sht/: clipboard  kernel.cu  kernel.h  python_wrapper.c
cunusht/deflection/: CPU_nufft_transformer.py  GPU_nufft_transformer.py
cunusht/sht/: CPU_sht_transformer.py  GPU_sht_transformer.py
dev/: TODO.md  device_info.cu  doubling.cpp.old  pointing.cpp.old  pointing.cuh.old
dev/c/: doubling.h
dev/c/sht/: assocLeg.py  python_wrapper.pyx  run.py
first_steps/: README.md  adjoint_synthesis_general.ipynb  nusht2d1.ipynb  nusht2d2.ipynb  quickstart.ipynb  synthesis_general.ipynb
misc/: configure
pySHT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pysht/: #transformer.py  CPU_ducc.py  CPU_duccnufft.py  CPU_finufft.py  GPU_cufinufft.py  __init__.py  geometry.py  helper.py  pysht.py  sht_transformer.py  transformer.py  transformer_clean.py  utils.py  visitor.py
pysht.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pysht/c/: CMakeLists.txt  _doublingpy.py  assocLeg.cu  assocLeg.py  assocLeg_clipboard.cu  cuda.ipynb  device_info  doubling.cpp  doubling.cu  doubling.cu.old  doubling.cuh.old  kernel_params.h  podo_interface.py  pointing.cpp  pointing.cu  pointing.cu.old  pointing.cuh  pointing.h  pointing_cu.clipboard  ptg.cu  pyproject.toml  run.py  setup.py  test_podo.py
pysht/c/sht/: python_wrapper.cpp
pysht/deflection/: CPU_ducc.py  CPU_duccnufft.py  CPU_finufft.py  CPU_nufft_transformer.py  GPU_cufinufft.py  GPU_nufft_transformer.py
pysht/sht/: CPU_sht_transformer.py  GPU_sht_transformer.py  sht.ipynb  sht.py  sht_transformer.py
test/: bench.ipynb  cufinufft.ipynb  externals.ipynb  gclm2lenmap_GPU.py  gclm2lenmap_GPU.py.lprof  lenspyxgpu.ipynb  perline.txt  pycuda.ipynb  pysht.ipynb  sht.ipynb  shtns.ipynb  sims_lib.ipynb  test_accuracy.py  test_adjointOperator.py  test_class_deflection.py  test_doubling.py  test_doublingGPU.py  test_gclm2lenmap.py  test_interface.py  test_lenmap2gclm.py  test_nuFFT.py  test_nuFFTplan.ipynb  test_nuFFTplan.py  test_pointing.py  test_pointingGPU.py  test_scipyFFT.py  test_shtnsGPU.py
test/benchmark/: benchmark_gclm2lenmap.py  benchmark_lenmap2gclm.py  benchmark_nufft.ipynb  benchmark_sht.ipynb  inspect_timings.ipynb  run_benchmark.sh
test/benchmark/profile/: README.md  _build_angles.txt  gclm2lenmap_GPU.py  gclm2lenmap_GPU.py.lprof  perline_CPU.txt  perline_GPU.txt
test/benchmark/timings/: CPU_duccnufft_1023  CPU_duccnufft_1023_e0.0001  CPU_duccnufft_1023_e1e-06  CPU_duccnufft_1023_e1e-10  CPU_duccnufft_1024  CPU_duccnufft_1279  CPU_duccnufft_1279_e0.0001  CPU_duccnufft_1279_e1e-06  CPU_duccnufft_1279_e1e-10  CPU_duccnufft_1280  CPU_duccnufft_1311  CPU_duccnufft_1535  CPU_duccnufft_1535_e0.0001  CPU_duccnufft_1535_e1e-06  CPU_duccnufft_1535_e1e-10  CPU_duccnufft_1536  CPU_duccnufft_1599  CPU_duccnufft_1791  CPU_duccnufft_1791_e0.0001  CPU_duccnufft_1791_e1e-06  CPU_duccnufft_1791_e1e-10  CPU_duccnufft_1792  CPU_duccnufft_1919  CPU_duccnufft_1951  CPU_duccnufft_2047  CPU_duccnufft_2047_e0.0001  CPU_duccnufft_2047_e1e-06  CPU_duccnufft_2047_e1e-10  CPU_duccnufft_2048  CPU_duccnufft_2239  CPU_duccnufft_2303  CPU_duccnufft_2303_e0.0001  CPU_duccnufft_2303_e1e-06  CPU_duccnufft_2303_e1e-10  CPU_duccnufft_2304  CPU_duccnufft_255  CPU_duccnufft_2559  CPU_duccnufft_2559_e0.0001  CPU_duccnufft_2559_e1e-06  CPU_duccnufft_2559_e1e-10  (+297 more)
test/benchmark/timings/gclm2lenmap/: CPU_duccnufft_1023_e1e-06  CPU_duccnufft_1023_e1e-10  CPU_duccnufft_1279_e1e-06  CPU_duccnufft_1279_e1e-10  CPU_duccnufft_1535_e1e-06  CPU_duccnufft_1535_e1e-10  CPU_duccnufft_1791_e1e-06  CPU_duccnufft_1791_e1e-10  CPU_duccnufft_2047_e1e-06  CPU_duccnufft_2047_e1e-10  CPU_duccnufft_2303_e1e-06  CPU_duccnufft_2303_e1e-10  CPU_duccnufft_2559_e1e-06  CPU_duccnufft_2559_e1e-10  CPU_duccnufft_255_e1e-06  CPU_duccnufft_255_e1e-10  CPU_duccnufft_2815_e1e-06  CPU_duccnufft_2815_e1e-10  CPU_duccnufft_3071_e1e-06  CPU_duccnufft_3071_e1e-10  CPU_duccnufft_3327_e1e-06  CPU_duccnufft_3327_e1e-10  CPU_duccnufft_3583_e1e-06  CPU_duccnufft_3583_e1e-10  CPU_duccnufft_3839_e1e-06  CPU_duccnufft_3839_e1e-10  CPU_duccnufft_4095_e1e-06  CPU_duccnufft_4095_e1e-10  CPU_duccnufft_4351_e1e-06  CPU_duccnufft_4351_e1e-10  CPU_duccnufft_4607_e1e-06  CPU_duccnufft_4607_e1e-10  CPU_duccnufft_4863_e1e-06  CPU_duccnufft_4863_e1e-10  CPU_duccnufft_5119_e1e-06  CPU_duccnufft_5119_e1e-10  CPU_duccnufft_511_e1e-06  CPU_duccnufft_511_e1e-10  CPU_duccnufft_5375_e1e-06  CPU_duccnufft_5375_e1e-10  (+78 more)
test/benchmark/timings/lenmap2gclm/: CPU_duccnufft_1023_e1e-06  CPU_duccnufft_1023_e1e-08  CPU_duccnufft_1279_e1e-06  CPU_duccnufft_1279_e1e-08  CPU_duccnufft_1535_e1e-06  CPU_duccnufft_1535_e1e-08  CPU_duccnufft_1791_e1e-06  CPU_duccnufft_1791_e1e-08  CPU_duccnufft_2047_e1e-06  CPU_duccnufft_2047_e1e-08  CPU_duccnufft_2303_e1e-06  CPU_duccnufft_2303_e1e-08  CPU_duccnufft_2559_e1e-06  CPU_duccnufft_2559_e1e-08  CPU_duccnufft_255_e1e-06  CPU_duccnufft_255_e1e-08  CPU_duccnufft_2815_e1e-06  (+136 more)
test/c/: CMakeLists.txt  _pointingpy.py  kernel_params.h  test_pointing.cpp  test_pointing.cu  test_pointing.cuh  test_pointing.h  test_popy.py
test/component/: cufinufft.ipynb  test_popy.ipynb  test_shtns_gpuarray.ipynb  test_shtns_gpuarray.py
test/debug/: cufft.py  debug.ipynb  debug.py  debug_doubling.ipynb  debug_gclm2lenmap_grad.ipynb  debug_jaxinterface.ipynb  debug_lenmap2gclm.ipynb  externals.ipynb  pysht.ipynb
test/lensing_reconstruction/: conf_mwe_fullsky.py  interactive_mwe.ipynb
test/notebook/: cufinufft.ipynb  sht.ipynb  test_GPUless.ipynb  test_shtns_gpuarray.ipynb
test/notebook/lensing_reconstruction/: interactive_mwe.ipynb
test/profile/: gclm2lenmap_GPU.py  output.pstats
